ch05/k8s/intro/deployment.yaml
# 実運用ではDeploymentを作ることがほとんど。
# ReplicaSetやPodだけで運用はしない
# DeploymentではReplicaSetの世代管理ができる
# $ kubectl rollout history deployment {deploymentName}
# でrevisionを確認できて、さらに
# $ kubectl rollout history deployment {deploymentName} --revision={revisionNo}
# で特定のrevisionのapplyしたマニフェストを確認できる
# ロールバックするには
# $ kubectl rollout undo deployment {deploymentName}
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
spec:
  replicas: 3
  selector: # ここでpod定義につけたlabelで指定できる
    matchLabels:
      app: echo
  template: # template以下はpod定義
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: nginx
        image: ghcr.io/gihyodocker/simple-nginx-proxy:v0.1.0
        ports:
        - containerPort: 80
      - name: echo
        image: ghcr.io/gihyodocker/echo:v0.1.0-patch
        ports:
        - containerPort: 8080
