ch05/k8s/intro/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo
  labels:
    app: echo
spec:
  containers:
  - name: nginx
    image: ghcr.io/gihyodocker/simple-nginx-proxy:v0.1.0
    ports:
    - containerPort: 80
  - name: echo
    image: ghcr.io/gihyodocker/echo:v0.1.0
    ports:
    - containerPort: 8080

# podには複数コンテナを配置できる。またpodには仮想IPアドレスが割り当てられるので、echoコンテナとnginxコンテナは同じlocalhostに居る
# コンテナ間通信は同じlocalhostなのでポート指定でできる
